# axum-embed

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
examples/: serve.rs
examples/assets/: 404.html  index.html  sample.js  sample.js.br  style.css  with space.txt
examples/assets/images/fox/: fox2.webp.br
examples/assets/subdir/: index.html  index.html.br
src/: lib.rs  test.rs
src/assets/: 404.html
